--- a/handleBlog/templates/changePass.html
+++ b/handleBlog/templates/changePass.html
@@ -9,7 +9,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css" rel="stylesheet" />
-    <title>Task Manager</title>
+    <title>Change Password</title>
 </head>
 <style>
     .gradient-custom {
@@ -48,6 +48,22 @@
           <a class="nav-link text-white mx-3" href="{% url 'logout' %}">Log out</a>
         </li>
       </ul>
+    </div>
+    <div class="d-flex align-items-center">
+      {% for user in users %}
+        {% if user.userEmail == request.session.email %}
+          <a href="{% url 'profile' %}">
+            <img
+            src="{{ user.userImage }}"
+            class="rounded-circle"
+            height="45"
+            width="48"
+            alt="User Image"
+            loading="lazy"
+            />
+          </a>  
+        {% endif %}
+      {% endfor %}
     </div>
   </nav>
 
