--- a/handleBlog/templates/myBlog.html
+++ b/handleBlog/templates/myBlog.html
@@ -11,7 +11,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css" rel="stylesheet" />
-    <title>Blogs</title>
+    <title>My   Blogs</title>
 </head>
 <style>
     .gradient-custom {
@@ -91,6 +91,22 @@
               <a class="nav-link text-white mx-3" href="{% url 'logout' %}">Log out</a>
             </li>
           </ul>
+        </div>
+        <div class="d-flex align-items-center">
+          {% for user in loggedUser %}
+            {% if user.userEmail == request.session.email %}
+              <a href="{% url 'profile' %}">
+                <img
+                src="{{ user.userImage }}"
+                class="rounded-circle"
+                height="45"
+                width="48"
+                alt="User Image"
+                loading="lazy"
+                />
+              </a>  
+            {% endif %}
+          {% endfor %}
         </div>
       </nav>
 
