--- a/handleBlog/templates/register.html
+++ b/handleBlog/templates/register.html
@@ -44,7 +44,7 @@
       
                       <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Register</p>
       
-                      <form class="mx-1 mx-md-4" action="{% url 'register' %}" method="post">
+                      <form class="mx-1 mx-md-4" action="{% url 'register' %}" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
       
                         <div class="d-flex flex-row align-items-center mb-4">
@@ -86,8 +86,14 @@
                               <label class="form-label" for="form3Example3c">About You</label>
                             </div>  
                           </div>
-      
-                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+
+                          <div class="d-flex flex-row align-items-center mb-4">
+                            <i class="fa-solid fa-image fa-lg me-3 fa-fw"></i>                            
+                            <div class="row justify-content-between text-left">
+                              <div class="form-group col-12 flex-column d-flex"> <input type="file" id="ans" name="userImage" placeholder="" onblur="validate(6)" required> </div>
+                            </div>
+                          </div>
+                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4 ">
                           <button type="submit" class="btn btn-primary btn-lg gradient-custom">Register</button>
                           <button class="btn btn-primary btn-lg gradient-custom mx-4" href="{% url 'login' %}">Login</button>
                         </div>
