Added user Profile, list, detail

--- a/handleBlog/templates/home.html
+++ b/handleBlog/templates/home.html
@@ -94,6 +94,9 @@
               <a class="nav-link text-white mx-3" href="{% url 'changePass' %}">Change Password </a>
             </li>
             <li class="nav-item">
+              <a class="nav-link text-white mx-3" href="{% url 'profile_list' %}">Profile list</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link text-white mx-3" href="{% url 'logout' %}">Log out</a>
               </li>
           </ul>
