Fixed Rating issues

--- a/handleBlog/templates/adminDash.html
+++ b/handleBlog/templates/adminDash.html
@@ -15,8 +15,8 @@
     .gradient-custom {
 
       background: #6a11cb;
-      background: -webkit-linear-gradient(to right, #ff2e1f, #ff703c);
-      background: linear-gradient(to right, #ff1f1f, #ff703c)
+      background: -webkit-linear-gradient(to right, #62cff4, #2c67f2);
+      background: linear-gradient(to right, #62cff4, #2c67f2)
     }
     h1,
       .navbar-brand,
@@ -26,8 +26,8 @@
 
     body {
       background: #6a11cb;
-      background: -webkit-linear-gradient(to right, #ff1f1f, #ff703c);
-      background: linear-gradient(to right, #ff1f1f, #ff703c)
+      background: -webkit-linear-gradient(to right, #62cff4, #2c67f2);
+      background: linear-gradient(to right, #62cff4, #2c67f2)
       }
 </style>
 <body>
