--- a/handleBlog/templates/handleUser.html
+++ b/handleBlog/templates/handleUser.html
@@ -14,8 +14,8 @@
 <style>
     .gradient-custom {
         background: #6a11cb;
-        background: -webkit-linear-gradient(to right, #ff1f1f, #ff703c);
-        background: linear-gradient(to right, #ff1f1f, #ff703c)
+      background: -webkit-linear-gradient(to right, #62cff4, #2c67f2);
+      background: linear-gradient(to right, #62cff4, #2c67f2)
     }
     h1,
       .navbar-brand,
