--- a/handleBlog/templates/content.html
+++ b/handleBlog/templates/content.html
@@ -118,7 +118,7 @@
     <div class="container-fluid px-1 py-5 mx-auto">
         <div class="row d-flex justify-content-center">
             <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-                <h3 style="color: white;">Add Content</h3>
+                <!-- <h3 style="color: white;">Add Content</h3> -->
                 
                 <div class="card">
                     <h5 class="text-center mb-4 gradient-custom text-white" style="border-radius: .5rem;">Enter Blog details</h5>
