--- a/handleBlog/templates/profile_detail.html
+++ b/handleBlog/templates/profile_detail.html
@@ -1,10 +1,179 @@
-{% extends 'home.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css" rel="stylesheet" />
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <title>Profile</title>
+</head>
+<style>
+    .gradient-custom {
+        background: #6a11cb;
+        background: -webkit-linear-gradient(to right, #cb356b, #bd3f32);
+        background: linear-gradient(to right, #cb356b, #bd3f32)
+    }
 
-{% block content %}
-    <h1>{{ profile.user.userName }}'s Profile</h1>
-    <p>{{ profile.user.userAbout }}</p>
-    <form action="{% url 'follow' profile.user_id %}" method="post">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-primary">Follow</button>
-    </form>
-{% endblock %}
+    body {
+        background: #6a11cb;
+        background: -webkit-linear-gradient(to right, #cb356b, #bd3f32);
+        background: linear-gradient(to right, #cb356b, #bd3f32)
+      }
+      .title {
+       
+          margin-bottom: 50px;
+          text-transform: uppercase;
+      }
+      
+      .card-block {
+          font-size: 1em;
+          position: relative;
+          margin: 0;
+          padding: 1em;
+          border: none;
+          border-top: 1px solid rgba(34, 36, 38, .1);
+          box-shadow: none;
+          
+           
+      }
+      .card {
+          font-size: 1em;
+          overflow: hidden;
+          padding: 5;
+          border: none;
+          border-radius: .7rem;
+          box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
+          margin-top:20px;
+      }
+      
+
+      .btn {
+        margin-top: auto;
+      }
+
+      h1,
+      .navbar-brand,
+      .navbar-nav a {
+        font-family: 'Gill Sans', sans-serif;
+      }
+
+      .rating-header {
+        margin-top: -10px;
+        margin-bottom: 10px;
+    }
+     
+      
+</style>
+<body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark p-5 gradient-custom pb-2 pt-3">
+        <a class="navbar-brand text-white mx-4" href="#">Just Blog it  </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link text-white mx-3" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white mx-3" href="{% url 'myBlog' %}">My Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white mx-3" href="{% url 'content' %}">Add Content</a>
+            </li> 
+            <li class="nav-item">
+              <a class="nav-link text-white mx-3" href="{% url 'changePass' %}">Change Password </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white mx-3" href="{% url 'logout' %}">Log out</a>
+              </li>
+          </ul>
+        </div>
+        <div class="d-flex align-items-center">
+          {% for user in users %}
+            {% if user.userEmail == request.session.email %}
+              <a href="{% url 'profile' %}">
+                <img
+                src="{{ user.userImage }}"
+                class="rounded-circle"
+                height="45"
+                width="48"
+                alt="User Image"
+                loading="lazy"
+                />
+              </a>  
+            {% endif %}
+          {% endfor %}
+        </div>
+      </nav>
+      
+      <section class="vh-100" style="background-color:gradient-custom">
+          {% for user in users %}
+      
+              <div class="container py-5 h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                  <div class="col col-md-9 col-lg-7 col-xl-5">
+                    <div class="card" style="border-radius: 15px;">
+                      <div class="card-body p-4">
+                        <div class="d-flex text-black">
+                          <div class="flex-shrink-0">
+                            <img src="{{ user.userImage }}"
+                              alt="Generic placeholder image" class="img-fluid"
+                              style="width: 180px; border-radius: 10px;">
+                          </div>
+                          <div class="flex-grow-1 ms-3">
+                            <h2 class="mb-1">{{ user.userName }}</h2>
+                            <p class="mb-2 pb-1" style="color: #2b2a2a;">{{ user.userAbout }}</p>
+                            <div class="d-flex justify-content-start rounded-3 p-2 mb-2"
+                              style="background-color: #efefef;">
+                              <div>
+                                <p class="small text-muted mb-1">Following</p>
+                                <p class="mb-0">0</p>
+                              </div>
+                              <div class="px-3">
+                                <p class="small text-muted mb-1">Followers</p>
+                                <p class="mb-0">0</p>
+                              </div>
+                              <div>
+                                <p class="small text-muted mb-1">Rating</p>
+                                <p class="mb-0">0</p>
+                              </div>
+                            </div>
+                            <div class="d-flex pt-1">
+
+                                {% if user_profile and user in following %}
+                                <form action="{% url 'unfollow' user_id=user_id %}" method="post">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-danger">Unfollow</button>
+                                </form>
+                                {% else %}
+                                <form action="{% url 'follow' user_id=user_id %}" method="post">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-primary">Follow</button>
+                                </form>
+                                {% endif %}
+                                
+                              <!-- <button type="button" class="btn btn-primary flex-grow-1">Follow</button> -->
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+      
+          {% endfor %}
+
+       
+</body>
+</html>
+
+
