--- a/handleBlog/templates/home.html
+++ b/handleBlog/templates/home.html
@@ -17,15 +17,15 @@
 </head>
 <style>
     .gradient-custom {
-        background: #6a11cb;
-        background: -webkit-linear-gradient(to right, #cb356b, #bd3f32);
-        background: linear-gradient(to right, #cb356b, #bd3f32)
+      background: #6a11cb;
+      background: -webkit-linear-gradient(to right, #ec0988, #f27468);
+      background: linear-gradient(to right, #ec0988 , #f27468)
     }
 
     body {
         background: #6a11cb;
-        background: -webkit-linear-gradient(to right, #cb356b, #bd3f32);
-        background: linear-gradient(to right, #cb356b, #bd3f32)
+        background: -webkit-linear-gradient(to right, #ec0988, #f27468);
+        background: linear-gradient(to right, #ec0988 , #f27468)
       }
       .title {
        
@@ -74,27 +74,27 @@
 </style>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark p-5 gradient-custom pb-2 pt-3">
-        <a class="navbar-brand text-white mx-4" href="#">Just Blog it  </a>
+    <nav class="navbar navbar-expand-lg navbar-dark p-5 bg-light pb-2 pt-3">
+        <a class="navbar-brand text-black mx-4" href="#">Just Blog it  </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link text-white mx-3" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link text-black mx-3" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white mx-3" href="{% url 'myBlog' %}">My Blog</a>
+              <a class="nav-link text-black mx-3" href="{% url 'myBlog' %}">My Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white mx-3" href="{% url 'content' %}">Add Content</a>
+              <a class="nav-link text-black mx-3" href="{% url 'content' %}">Add Content</a>
             </li> 
             <li class="nav-item">
-              <a class="nav-link text-white mx-3" href="{% url 'changePass' %}">Change Password </a>
+              <a class="nav-link text-black mx-3" href="{% url 'changePass' %}">Change Password </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white mx-3" href="{% url 'logout' %}">Log out</a>
+                <a class="nav-link text-black mx-3" href="{% url 'logout' %}">Log out</a>
               </li>
           </ul>
         </div>
@@ -127,31 +127,28 @@
                  {% csrf_token %}
                  <button type="submit" class="btn gradient-custom mt-2 text-white mb-2 "><h6>About</h6></button>
                </form>
-
+               {% if blog.user_id.userEmail != request.get.email %}
               <div class="card-block px-6">
-                <h3 class="card-title">{{blog.user_id.userName}}</h3> 
+                    <h3 class="card-title">{{blog.user_id.userName}}</h3> 
 
-                <p class="card-text">{{ blog.blogDate }}</p>
+                    <p class="card-text">{{ blog.blogDate }}</p>
 
-
-                <i class="fa fa-quote-left text-black"></i>
-                
-                <h4 class="card-title">{{blog.blogTitle}}</h4>
-                <p class="card-text">
-                    {{blog.blogContent}}
-                </p>
-              </div>
-            </div>
-       
-            <div class="col-md-5">
-
-                <div>
-                    <img src="{{ blog.blogImage }}" alt="image" class="img-fluid" style="width:100%; height:100%; border-radius: 7px;">
+                    <i class="fa fa-quote-left text-black"></i>
+                    
+                    <h4 class="card-title">{{blog.blogTitle}}</h4>
+                    <p class="card-text">
+                        {{blog.blogContent}}
+                    </p>
+                  </div>
                 </div>
-
-            </div>
-
-            </div>
+          
+                <div class="col-md-5">
+                    <div>
+                        <img src="{{ blog.blogImage }}" alt="image" class="img-fluid" style="width:100%; height:100%; border-radius: 7px;">
+                    </div>
+                </div>
+              </div>
+              {% endif %}
             
             <div class="col-md-7 px-3">
               <div class="card-block px-6">
@@ -176,9 +173,10 @@
                   <form action="{% url 'addRating' pk=blog.blog_id %}" method="post">
                     {% csrf_token%}
                     <div class="form-group" id="rating-ability-wrapper">
+                      
                       <label class="control-label" for="rating">
                       <span class="field-label-header">How would you rate this blog?</span><br>
-                      <span class="field-label-info"></span>
+                      <span class="field-label-info" style="color: red;">{{message}}</span>
                       <input type="hidden" id="selected_rating"  required="required">
                       </label>
                       <h2 class="bold rating-header">
@@ -235,7 +233,7 @@
             {% for comment in comments %}
             {% if comment.blog_id.blog_id == blog.blog_id %}
             <div class="card-block px-6 ">
-                <div class="d-flex justify-content-between align-items-center font-bold">
+                <div class="d-flex justify-content-between align-items-center font-bold"> 
                     <p class="mb-1">
                         {{ comment.commentersName }} <span class="small">{{ comment.commentDate }}</span>
                     </p>
