--- a/handleBlog/templates/profile_detail.html
+++ b/handleBlog/templates/profile_detail.html
@@ -148,16 +148,15 @@
                             </div>
                             <div class="d-flex pt-1">
 
-                                {% if user_profile and user in following %}
-                                <form action="{% url 'unfollow' user_id=user_id %}" method="post">
-                                    {% csrf_token %}
-                                    <button type="submit" class="btn btn-danger">Unfollow</button>
-                                </form>
-                                {% else %}
-                                <form action="{% url 'follow' user_id=user_id %}" method="post">
-                                    {% csrf_token %}
-                                    <button type="submit" class="btn btn-primary">Follow</button>
-                                </form>
+                                {% if user.user_id != request.user.user_id %}
+                                  <form action="{% url 'follow' user.user_id %}" method="post">
+                                      {% csrf_token %}
+                                      {% if user.user_id in request.user.userprofile.followers.all %}
+                                          <button type="submit" class="btn btn-danger">Unfollow</button>
+                                      {% else %}
+                                          <button type="submit" class="btn btn-primary">Follow</button>
+                                      {% endif %}
+                                  </form>
                                 {% endif %}
                                 
                               <!-- <button type="button" class="btn btn-primary flex-grow-1">Follow</button> -->
