--- a/handleBlog/templates/register.html
+++ b/handleBlog/templates/register.html
@@ -95,11 +95,12 @@
                           </div>
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4 ">
                           <button type="submit" class="btn btn-primary btn-lg gradient-custom">Register</button>
-                          <button class="btn btn-primary btn-lg gradient-custom mx-4" href="{% url 'login' %}">Login</button>
+                          <!-- <button class="btn btn-primary btn-lg gradient-custom mx-4" href="{% url 'login' %}">Login</button> -->
                         </div>
                       </form>
-      
-                    </div>
+                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4 ">
+                          <button class="btn btn-primary btn-lg gradient-custom mx-4" ><a style="color: white;" href="{% url 'login' %}">Back to Login</a></button></div>
+                        </div>
                     <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
       
                       <img src="https://assets-global.website-files.com/621d41df6da9f0dcc7cb5eeb/62c4a27a4208d1536a2f4379_pablo-book-lover.png"
