--- a/handleBlog/templates/profile.html
+++ b/handleBlog/templates/profile.html
@@ -139,7 +139,7 @@
                               <div>
 
                                 <p class="small text-muted mb-1">Following</p>
-                                <p class="mb-0">0</p>
+                                <p class="mb-0">{{ followings }}</p>
                               </div>
                               <div class="px-3">
                                 <p class="small text-muted mb-1">Followers</p>
