--- a/handleBlog/templates/profile_detail.html
+++ b/handleBlog/templates/profile_detail.html
@@ -119,7 +119,7 @@
                               style="background-color: #efefef;">
                               <div>
                                 <p class="small text-muted mb-1">Following</p>
-                                <p class="mb-0">0</p>
+                                <p class="mb-0">{{ followings }}</p>
                               </div>
                               <div class="px-3">
                                 <p class="small text-muted mb-1">Followers</p>
